# xsolver

./: CMakeLists.txt  readme.md
cuda/: CMakeLists.txt  DeviceMatrix.h  DeviceMatrixCSR.h  DeviceMatrixELL.h  HostMatrix.h  mpicpu.cpp  mpicpu.h  mpicudasolver-C-v1.cu
hip/: CMakeLists.txt  CMakeLists_subdir.cmake  main_solve_base.cpp  main_solve_mpi.cpp  mpi_solve_base.h  mpicpu.cpp  mpicpu.h  solve_base.h  xsolver_c.cpp  xsolver_c.h  xsolver_head.h
hip/HostMatrix/: HostMatrix.cpp  HostMatrix.h  HostMatrixCSC.cpp  HostMatrixCSC.h  HostMatrixCSR.cpp  HostMatrixCSR.h  HostMatrixELL.cpp  HostMatrixELL.h  HostMatrixMCSR.cpp  HostMatrixMCSR.h
hip/HostMatrix/DeviceMatrix/: DeviceMatrix.cpp  DeviceMatrix.h  DeviceMatrixCSR.cpp  DeviceMatrixCSR.h  DeviceMatrixELL.cpp  DeviceMatrixELL.h
hip/HostVector/: CMakeLists.txt  HostVector.cpp  HostVector.h
hip/HostVector/DeviceVector/: DeviceVector.cpp  DeviceVector.h
hip/Precond/: gpuparilu.cpp  gpuparilu.h  ic0.cpp  ic0.h  ict_l.cpp  ict_l.h  ilut_diag_in_csr.cpp  ilut_diag_in_csr.h  parilut.cpp  parilut.h  precon_gpuilu0.cpp  precon_gpuilu0.h  precon_gpuilut.cpp  precon_gpuilut.h  precon_gpujacobi.cpp  precon_gpujacobi.h  precon_ic0.cpp  precon_ic0.h  precon_ict.cpp  precon_ict.h  precon_ilu0.cpp  precon_ilu0.h  precon_ilu0_mkl.cpp  precon_ilu0_mkl.h  precon_ilup.cpp  precon_ilup.h  precon_ilup_mkl.cpp  precon_ilup_mkl.h  precon_jacobi.cpp  precon_jacobi.h  preconditioner.cpp  preconditioner.h
hip/Precond/par_ilu_hip/: Asplit_gpu.cpp  Asplit_gpu.h  precon_parilu.h
hip/Precond/par_ilut_hip/: My_Mulwarp.h  My_Mulwarp_bk.h  My_Mulwarp_predictsize.h  My_computeSpmm.h  My_computebin_ondevice.cpp  My_computebin_ondevice.h  select_kth.h  timetest.h
hip/Solver/: xsolver.cpp  xsolver.h  xsolver_bicgstab.cpp  xsolver_bicgstab.h  xsolver_cg.cpp  xsolver_cg.h  xsolver_igcr.cpp  xsolver_igcr.h
hip/Tool/: MatrixTrans.h  distribute_mtx.h  quick_sort.h
hip/Tool/ReadMatrix/: common.h  csr_mmio_highlevel.h  mmio.h  mmio_highlevel_symmetric.h
hip/Tool/SparseMatrix/: MatrixCSCSparse.h  MatrixCSCSparseToCSR.h  MatrixCSRSparse.h
hip/solver-C/: axpy.c  bicg_kernel.c  bmAx_ell.c  bmAx_unroll.c  copy.c  csr_to_bell.h  csr_to_ell.h  csr_to_expell.h  dot.c  dot_par.c  dot_seq.c  jacobi.c  libhead.h  mat_analyse.c  partition.c  partition.h  scal.c  seddot.c  solver.c  solver.h  solver_log.c  solver_time.c  spmv.c  spmv.h  spmv_avx.h  spmv_csc.c  spmv_csr.c  spmv_ell.c  spmv_nnz.c  spmv_node.c  spmv_node_pe.c  spmv_pre.c  spmv_prex.c  spmv_rc_ell.c  spmv_simdnode.c  spmv_simdnode_case5.c  spmv_unroll.c  spmv_unroll_base.c  spmv_unroll_new.c  spmv_unroll_new1.c  (+1 more)
hip/solver-C/rc_spmv/: csr_to_bell1.h  spmv_node_pe.c  spmv_rc_ell0.c  spmv_rc_ell1.c  spmv_rc_ell2.c  spmv_rc_ell_copy.c  spmv_rc_ellbk.c
intel/: CMakeLists.txt  HostMatrix.h  mpicpu.cpp  mpicpu.h  mpisolver-C-v1.cpp
